[package]
name = "integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
glob.workspace = true
itertools.workspace = true
log.workspace = true
log4rs.workspace = true
rand.workspace = true

halo2_proofs.workspace = true
prover.workspace = true
zkevm-circuits.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
pprof.workspace = true
rmp-serde.workspace = true

[features]
default = []
prove_verify = []
